--- a/kasa/src/Styles/Header.css
+++ b/kasa/src/Styles/Header.css
@@ -2,8 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 1240px;
     height: 68px;
     padding: 40px 100px 40px 100px;
+    margin: 0;
 }
 
 .nav-bar{
