--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -11,7 +11,7 @@
     padding-left: 100px;
     background: #F7F7F7;
 }
-.Banner-background{
+.Banner-img{
     object-fit: cover;
     width: auto;
     height: 223px;
