--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -12,13 +12,13 @@
     display: flex;
 }
 
-.nav-bar>li{
+.nav-bar>a{
    color: rgba(255, 96, 96, 1);
    list-style: none;
    padding-left: 57px;
    font-size: 24px;
    font-family: 'Montserrat';
 }
-.nav-bar>li:hover{
+.nav-bar>a:hover{
     text-decoration: underline;
 }
