--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,12 +1,10 @@
 .Cardgrid {
     display: grid;
-
     grid-template-columns: repeat(3, 340px);
     grid-template-rows: 340px 340px;
     grid-gap: 60px;
     margin: 100px;
     padding: 50px;
-
 }
 .Card {
     display: flex;
@@ -15,7 +13,14 @@
     width: 340px;
     height: 340px;
     border-radius: 10px;
+    margin-bottom: 50px;
     background: linear-gradient(180deg, #FF6060 0%, rgba(255, 96, 96, 1) 100%);
+}
+.Card-background {
+    width: 100%;
+    height: 255px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 .Card>h2 {
     font-family: 'Montserrat';
