--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,4 +1,5 @@
 .Footer {
+	max-width: 1240px;
 	color: white;
     background-color: black;
     padding-top: 66px;
@@ -7,4 +8,5 @@
 	flex-direction: column;
 	align-items: center;
     font-size: 24px;
+	margin-top: 30px;
 }
