--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1240px;
+    max-width: 1240px;
     height: 68px;
-    padding: 40px 100px 40px 100px;
+    padding: 40px 0px 40px 0px;
     margin: 0;
 }
 
