--- a/src/Styles/Dropdown.css
+++ b/src/Styles/Dropdown.css
@@ -1,7 +1,7 @@
 .Dropdown {
 
     height: auto;
-    width: 1023px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin-top: 33px;
