--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -10,7 +10,7 @@
     display: flex;
 
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex end;
     width: 340px;
     height: 340px;
     border-radius: 10px;
