--- a/src/Styles/Carroussel.css
+++ b/src/Styles/Carroussel.css
@@ -1,10 +1,29 @@
 .Banner_logement{
     position: relative;
     max-width: 100%;
-    width: 1240px;
+    width: 100%;
     height: 415px;
-    padding-left: 100px;
 }
 .Img_Logement{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    border-radius: 25px;
+    position: absolute;
+}
+
+.fa-chevron-left {
+    position: absolute;
+    top: 156px;
+    left: 23px;
+    font-size: 80px;
+    color: white;
+}
+
+.fa-chevron-right{
+    position: absolute;
+    top: 156px;
+    right: 23px;
+    font-size: 80px;
+    color: white;
 }
