--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -1,14 +1,15 @@
 
 .Banner{
+    display: flex;
+    justify-content: center;
     max-width: 100%;
     position: relative;
     height: 223px;
 }
 .Banner-img{
     object-fit: cover;
-    width: auto;
-    height: 223px;
     border-radius: 25px;
+    filter: brightness(0.75);
 }
 .Banner>p{
     position: absolute;
@@ -19,4 +20,23 @@
     font-size: 48px;
     line-height: 142.6%;
     color: white;
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .Banner{
+        height: 110px;
+    }
+    .Banner-img{
+        max-width: 100%;
+        border-radius: 10px;
+    }
+    .Banner>p{
+        width: 60%;
+        left: 10%;
+        top: 10%;
+        margin: 0;
+        font-size: 24px;
+    }
 }
