--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -10,3 +10,12 @@
     font-size: 24px;
 	margin-top: 30px;
 }
+
+@media screen and (max-width: 768px) {
+
+	.Footer {
+		font-size: 12px;
+		padding-bottom: 30px;
+	}
+  
+  }
