--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -22,3 +22,19 @@
 .nav-bar>a:hover{
     text-decoration: underline;
 }
+
+@media screen and (max-width: 768px) {
+
+.header{
+    max-width: 90%;
+    padding: 5%;
+}
+
+.logo-Kasa {
+    width:30%;
+}
+.nav-bar>a{
+    padding-left: 15px;
+    font-size: 16px;
+}
+}
