--- a/src/Styles/Host.css
+++ b/src/Styles/Host.css
@@ -20,3 +20,16 @@
    border-radius: 100%;
    width: 60px;
 }
+
+@media screen and (max-width: 768px) {
+
+    .Host{
+        margin-top: 0px
+    }
+    
+    .Host-name {
+        width: 60px;
+        font-size: 12px;
+        justify-content: center;
+    }
+}
