--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,8 @@
-body {
-  max-width: 1240px;
+.body {
+  max-width: 90%;
   margin: auto;
+  justify-content: center;
+  align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@media screen and (max-width: 768px) {
 
+
+  
+  }
