--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -2,9 +2,9 @@
 .Banner{
     display: flex;
     justify-content: center;
-    max-width: 100%;
+    width: 100%;
     position: relative;
-    height: 223px;
+    height: auto;
 }
 .Banner-img{
     object-fit: cover;
@@ -29,14 +29,15 @@
         height: 110px;
     }
     .Banner-img{
-        max-width: 100%;
+        width: 100%;
         border-radius: 10px;
     }
     .Banner>p{
         width: 60%;
-        left: 10%;
-        top: 10%;
+        left: 5%;
+        top: 20%;
         margin: 0;
-        font-size: 24px;
+        font-size: 20px;
+        white-space: pre-line;
     }
 }
