--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1240px;
+    max-width: 100%;
     height: 68px;
     padding: 40px 0px 40px 0px;
     margin: 0;
@@ -25,16 +25,16 @@
 
 @media screen and (max-width: 768px) {
 
-.header{
-    max-width: 90%;
-    padding: 5%;
-}
+    .header{
 
-.logo-Kasa {
-    width:30%;
-}
-.nav-bar>a{
-    padding-left: 15px;
-    font-size: 16px;
-}
+        padding: 10px 0px 10px 0px;
+
+    }
+    .logo-Kasa {
+        width:30%;
+    }       
+    .nav-bar>a{
+        padding-left: 15px;
+        font-size: 16px;
+    }
 }
