--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -14,9 +14,10 @@
     height: 340px;
     border-radius: 10px;
     margin-bottom: 50px;
-    background: linear-gradient(180deg, #FF6060 0%, rgba(255, 96, 96, 1) 100%);
+    background: linear-gradient(180deg, rgba(255, 96, 96) 70%, rgb(110, 40, 40) 100%);
+
 }
-.Card-background {
+.Card-img {
     width: 100%;
     height: 255px;
     object-fit: cover;
@@ -56,9 +57,5 @@ a {
         flex-direction: column;
         justify-content: flex end;
         width: 100%;
-        height: 340px;
-        border-radius: 10px;
-        margin-bottom: 50px;
-        background: linear-gradient(180deg, #FF6060 0%, rgba(255, 96, 96, 1) 100%);
     }
 }
